--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ SQLAlchemy==1.3.23
 Werkzeug==1.0.1
 requests==2.27.1
 pandas==1.3.5
-espn_api=0.19.2
+espn_api==0.19.2
 google-cloud-datastore
 google-cloud-storage
 py-bcrypt
