--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ requests==2.27.1
 pandas==1.3.5
 espn_api==0.19.2
 google-cloud-datastore
+google-cloud-bigquery-storage
+google-cloud-bigquery==2.3.1
+google-cloud-storage
 py-bcrypt
+pyarrow
